added skills section, minor changes

--- a/index.html
+++ b/index.html
@@ -33,6 +33,44 @@
         </section>
         <section class="skills">
             <h2>Skills</h2>
+            <section class="skills-section">
+                <span class="skills-cards">
+                    <img class="skills-icons" src="./images/html.svg" alt="html">
+                    <p>HTML</p>
+                </span>
+                <span class="skills-cards">
+                    <img class="skills-icons" src="./images/css.svg" alt="css">
+                    <p>CSS</p>
+                </span>
+                <span class="skills-cards">
+                    <img class="skills-icons" src="./images/javascript.svg" alt="javascript">
+                    <p>JavaScript</p>
+                </span>
+                <span class="skills-cards">
+                    <img class="skills-icons" src="./images/jquery.svg" alt="jquery">
+                    <p>jQuery</p>
+                </span>
+                <span class="skills-cards">
+                    <img class="skills-icons" src="./images/react.svg" alt="react">
+                    <p>React</p>
+                </span>
+                <span class="skills-cards">
+                    <img class="skills-icons" src="./images/git.svg" alt="git">
+                    <p>Git</p>
+                </span>
+                <span class="skills-cards">
+                    <img class="skills-icons" src="./images/nodejs.svg" alt="nodejs">
+                    <p>Node.js</p>
+                </span>
+                <span class="skills-cards">
+                    <img class="skills-icons" src="./images/express-js.svg" alt="expressjs">
+                    <p>Express</p>
+                </span>
+                <!-- <span class="skills-cards">
+                    <img class="skills-icons" src="./images/mysql.svg" alt="SQL">
+                    <p>SQL</p>
+                </span> -->
+            </section>
         </section>
         <section class="contact">
             <h2>Contact</h2>
