added Proyects div

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
                     What drives me is building new things and projects that help me become a better programmer and see this skills progressively impact the company in a positive way. I'm looking for a company that offers mentorship and skilled co-workers that I can learn from, learn everyday and help the company grow. I can't wait to break in the industry and start making some great apps together!
                 </p>
         </section>
+        <section class="proyects" >
+                <h2>Projects</h2>
+
+        </section>
         <section class="skills">
             <h2>Skills</h2>
             <section class="skills-section">
