adding screenshots for project section and fixing height responsiveness issues

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
             <section class="hero">
                 <h1>I'm Kenny</h1>
                 <h2>a Programmer</h2>
-                <!-- <button>||{</button> -->
             </section>
                 <hr>
                 <section class="main-icon">
@@ -30,9 +29,42 @@
                     What drives me is building new things and projects that help me become a better programmer and see this skills progressively impact the company in a positive way. I'm looking for a company that offers mentorship and skilled co-workers that I can learn from, learn everyday and help the company grow. I can't wait to break in the industry and start making some great apps together!
                 </p>
         </section>
-        <section class="proyects" >
+        <section class="projects" >
                 <h2>Projects</h2>
-
+                <section class="projects-section">
+                    <span class="project-cards">
+                        <a href="https://nadielotiene.github.io/personal-dashboard/"><img class="projects-icons" src="./images/Screenshot 2024-11-16 at 12.45.44 AM.png" alt="Personal Dashboard project"></a> 
+                        <p>Personal Dashboard</p>
+                    </span>
+                    <span class="project-cards">
+                        <a href="https://nadielotiene.github.io/Kenneth-Velazquez-cohort223-landing-page-template-project/"><img class="projects-icons" src="./images/Screenshot 2024-11-16 at 12.54.40 AM.png" alt="Resort Landing Page project"></a> 
+                        <p>Resort Landing Page</p>
+                    </span>
+                    <span class="project-cards">
+                        <img class="projects-icons" src="./images/javascript.svg" alt="javascript">
+                        <p>JavaScript</p>
+                    </span>
+                    <span class="project-cards">
+                        <img class="projects-icons" src="./images/jquery.svg" alt="jquery">
+                        <p>jQuery</p>
+                    </span>
+                    <!-- <span class="project-cards">
+                        <img class="projects-icons" src="./images/react.svg" alt="react">
+                        <p>React</p>
+                    </span>
+                    <span class="project-cards">
+                        <img class="projects-icons" src="./images/git.svg" alt="git">
+                        <p>Git</p>
+                    </span>
+                    <span class="project-cards">
+                        <img class="projects-icons" src="./images/nodejs.svg" alt="nodejs">
+                        <p>Node.js</p>
+                    </span>
+                    <span class="project-cards">
+                        <img class="projects-icons" src="./images/express-js.svg" alt="expressjs">
+                        <p>Express</p>
+                    </span> -->
+                </section>
         </section>
         <section class="skills">
             <h2>Skills</h2>
@@ -79,9 +111,9 @@
             <h2>Contact</h2>
         </section>
         <footer>
-            <section class="socials-icons">
+            <section class="socials-icons linkedin">
                 <span class="socials-cards">
-                    <a href="https://www.linkedin.com/in/kenneth-velazquez-dev/"><img class="socials" src="./images/linkedin.svg" alt="linkedin"></a>
+                    <a href="https://www.linkedin.com/in/kenneth-velazquez-dev/"><img class="socials linkedin" src="./images/linkedin.svg" alt="linkedin"></a>
                     <p>Linkedin</p>
                 </span>
                 <span class="socials-cards">
