change media queries to clamps

--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
             <section class="socials-icons linkedin">
                 <span class="socials-cards">
                     <a href="https://www.linkedin.com/in/kenneth-velazquez-dev/"><img class="socials linkedin" src="./images/linkedin.svg" alt="linkedin"></a>
+                    <!-- <svg width="200" height="200" xmlns="./images/linkedin.svg"> -->
+                        <!-- <image href="./images/linkedin.svg" height="200" width="200" /> -->
+                      </svg>
                     <p>Linkedin</p>
                 </span>
                 <span class="socials-cards">
